--- a/index.html
+++ b/index.html
@@ -1020,6 +1020,14 @@ We also need to address what is fundamentally broken in our major parties. If a 
 
 </section> <!-- experience -->
 
+<section id="reading" class="content-section responsive-width">
+
+<h2>Further reading: current reading and planned reading</h2>
+
+<p>I'm currently reading <i>Post-Keynesian Economics: New Foundations</i> by Marc Lavoie, a masters-level post-classical realist economics textbook. I expect Post-Keynesianism to be an incomplete theory like all major economic theories when it comes to the elephant of changes in natural resources such as land per capita at constant quality as a core determinant of real wealth. However, I also expect it to be more complete and more interesting than the tedious microenonomics, business management, finance, irrational assumptions of rationality and libertarianism of our standard neoclassical economics textbooks. Policy economics is fundamentally realistic, macro, institutional, ecological and primarily post-Keynsian, so my further economics reading after Lavoie will likely follow these trends.</p>
+
+</section> <!-- reading -->
+
 <section id="contact" class="content-section responsive-width">
 
  <h4 style="text-align: center;">Please follow me to support me, see updates on my campaign, and see more videos explaining my plan:</h4>
