--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 <p>Please email me if you are willing to help me to register as a candidate by providing me with your details: <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
 
 <p>Most people won't want to read all 10&#8239;000 words of the summary of my plan on this website, which is fine.<br>
-The most important ideas behind my campaign are explained in the first two 90-second videos.<br>
-I will be posting more short videos on Youtube and social media between now and the election.</p>
+The most important ideas behind my campaign are explained in the first few 90-second videos.<br>
+I will be posting more short videos on Youtube and social media between now and the election going into specifics.</p>
 
 <p>You can also listen to a podcast version of the first part of an older version of this website on <a href="https://music.youtube.com/playlist?list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT&si=0X1qqmtE6xEp0D_0">Youtube Music</a>, <a href="https://open.spotify.com/episode/0OgcLqFbmoG5ZxTQNLFg3c?si=kTGEkiXwTxGF2VnEg_j7qQ">Spotify</a>, <a href="https://podcasts.apple.com/us/podcast/alec-gargetts-podcast/id1866476428">Apple Podcasts</a> or watch on <a href="https://www.youtube.com/watch?v=kC8SzDs7b-U&list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT">Youtube</a>.</p>
 
