--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@ I will be posting more short videos on Youtube and social media between now and 
   <li>Solve the <a href="#COL">cost of living crisis</a> and the <a href="#3_Housing">housing crisis</a>;</li>
   <li>Protect and improve our <a href="#QOL">quality of life</a>, our <a href="#14.0_Clean_Air">environment</a>, the <a href="#5.1_Build_Better">beauty of our city and our suburbs</a>, and our public services;</li>
   <li>Solve the <a href="#6.0_Better_Care">aged care and hospital crisis</a>, including the ramping crisis;</li>
-  <li>Address the pollution that caused the <a href="#13.0_Algae_Solution">algae crisis</a> so the algae doesn't come back;</li>
+  <li>Address the pollution that caused the <a href="#13.0_Algae_Solution">algae crisis</a> so the algae doesn't come back, and reduce traffic congestion;</li>
   <li>Solve the <a href="#12.0_Police_Support">police staffing crisis</a>;</li>
-  <li>Protect our children, women and men from <a href="#19.0_Wellbeing">unfair treatment and harm</a>, including from <a href="#19.4_Regulate_Advertising">gambling ads and other harmful advertising</a>;</li>
+  <li>Protect our children, women and men from <a href="#19.0_Wellbeing">unfair treatment and harm</a>, including from <a href="#19.4_Regulate_Advertising">harmful advertising</a>;</li>
   <li>Solve the <a href="#10.0_SAES">unemployment and underemployment crisis</a>;</li>
   <li>Solve <a href="#18.0_Education_and_Music">education</a> and local <a href="#18.2_Support_Artists">music</a>;</li>
   <li>Support measures to <a href="#20.0_Non-violence">protect animals from unnecessary harm and cruelty</a>;</li>
@@ -908,7 +908,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
   <small>(19.4_Regulate_Advertising)</small>
  </h4>
  
- <p>Give both SA Health and the EPA the power to regulate against harmful advertising, such as gambling ads or alcohol ads, especially when children may be present, and to regulate product packaging to better inform consumers about products.</p>
+ <p>Give both SA Health and the EPA the power to regulate against harmful advertising, such as alcohol ads, especially when children may be present, and to regulate product packaging to better inform consumers about products.</p>
 
  <p>Make it mandatory to include the Health Star Rating on all packaged foods and beverages. Add colour coding to the Health Star Rating, and an exact rating of the product out of 100. Include more harmful substances such as microplastics, heavy metals, POPs and alcohol in the algorithm for calculating the Health Star Rating. If the food or beverage has a low Health Star Rating, include the quantity of these harmful substances in the nutritional information.</p>
 
