--- a/index.html
+++ b/index.html
@@ -226,11 +226,12 @@ I will be posting more short videos on Youtube and social media between now and 
  <p>If politicians just did this one job well enough, government departments would be collaborating with others, including non-departmental experts and the general public, to do all of the other necessary policy making with integrity, with politicians providing the oversight to ensure that their work is aligned with democratic preferences and the best available evidence. Currently this isn't happening. In order for politicians to manage government departments well, they need to be capable of thinking critically and independently about policy, and we need to support the candidates who have best demonstrated that ability through their policy writing and their policy communication.</p>
 
  <p>Ideally, a political candidate should be passionate enough about policy to publish thousands of words of their own policy detail that they have written themselves on their own initiative. Electing politicians who are committed to doing that and free to do that is the only way to ensure accountable, passionate, competent and dynamic policy development.</p>
+
  <p>Candidates don't need to be perfect at policy. Nobody is. Policy is not a precise science. You don't need to agree with all of a candidate's policies. Most people aren't even interested in policy and that's OK. You don't need to read every detail. But at the very least, you need to know that the details are there, and that the details are theirs. You need to know that they are capable of thinking independently about policy for their own electorate, because that's their job, and if we don't elect political candidates who have demonstrated that they are committed to doing that job and free to do that job, they won't, and that's why they aren't.</p>
 
  <p>In the end, all of the above crises could be solved with just one policy if it were implemented well enough:</p>
  <ul>
-  <li>Ensure that anyone who can help to solve the crises is encouraged to do so and fairly paid if they want pay. As part of that, ensure that any well-meaning person who wants to work in policy development is allowed fair involvement.</li>
+  <li>Ensure that anyone who can help to solve any crisis is encouraged to do so and fairly paid if they want pay. As part of that, ensure that any well-meaning person who wants to work in policy development is allowed fair involvement.</li>
  </ul>
 
  <p>In other words, if enough people including competent experts were adequately paid to work together on solving our problems, they would solve our problems. But ensuring this is implemented well enough requires voters to take action to encourage independent policy thinkers to run for office and get them elected.</p>
@@ -246,6 +247,8 @@ I will be posting more short videos on Youtube and social media between now and 
 <p>Since I will work for the people of Waite, my priorities have to be determined by the people of Waite. I will always be seeking to further improve my policies and ensure they are aligned with the wishes of the electorate, including in response to feedback from the people of Waite. Please send any feedback to <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>.</p>
 
 <p>If I'm elected, I will continue to develop these policies, make more short videos to explain each of them, and add a comment section to this website so that others can contribute.</p>
+
+<p>One of the first things I will do if elected is to use the resources of my office to survey the people of Waite to democratically determine what my priorities will be.</p>
 
 <p>Here is a (very) quick summary of most of my policies:</p>
 
