--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ I will be posting more short videos on Youtube and social media between now and 
     <a href="#1.1_Efficiency_Loans">Reduce bills by providing zero-interest loans for efficiency upgrades including solar water heating and electrification at regulated prices</a> (1.1)
    </li>
    <li>
-    <a href="#1.2_Cheap_Essentials">Provide cheap electricity and cheap healthy foods with government investment, regulation and compensation</a> (1.2)
+    <a href="#1.2_Cheap_Essentials">Provide cheap electricity and cheap healthy foods with government investment, and a PBS-like system of regulation and compensation</a> (1.2)
    </li>
    <li>
     <a href="#1.3_Taxes">Cut taxes on ordinary Australians. Raise taxes on multinationals and income above $500 000 per year (or more than ten times above the median average income).</a> (1.3)
