--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@ I will be posting more short videos on Youtube and social media between now and 
   <li>Increase the <a href="#17.0_Democratise">accountability, efficiency and competence of our parliament</a> and our policy-making.</li>
  </ul>
 
+ <p>You can click <a href="#policy">here</a> to skip straight to a summary of my policies. Despite having so much policy detail, they are arguably not the most important part of my platform.</p>
+
  <!-- <p>That isn't to say that my plan is perfect. Nor is it to claim I can solve any of this by myself. But I do believe most of the above is achievable with enough people working together on an adequate plan and enough people supporting it.</p>
 
  <p>If elected I will work with others to improve my plans, or improve their plans, and try to get them implemented. Even in the best case scenario, we won't be able to solve all of the above in my first term, but we need to start work on all of it, and for that we need a comprehensive plan that sincerely attempts to solve all of the above, not just policies to mitigate our problems here and there.</p>
