--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
   <li>Secondly, due to Policy 4 below, property investors will be incentivised or required to sell to the rightful resident at such a designated price, rather than sell to someone else, and this price limit will be stricter for large-portfolio investments than for a primary residence, as explained below.</li>
  </ul>
 
-<h4>Regulate who land and housing investors must offer their properties to and how much they can charge<br>
+<h4 id="4.0_Regulate_Investment">Regulate who land and housing investors must offer their properties to and how much they can charge<br>
  <small>(4.0_Regulate_Investment)</small>
 </h4>             
 <!-- Incentivise property investors to do the right thing, by charging them if they do the wrong thing. For example, property investors will be charged if they have evicted someone from their home just to sell the property to someone wealthier, or if they have otherwise failed to allow the property to be rented or purchased by the person or family with the greatest moral right to the property at a fair price. The Quality of Life Commission will be instructed to devise a system for determining and enforcing this. -->
@@ -574,6 +574,12 @@ Increase wages faster and reduce unemployment by requiring the Fair Work Commiss
  <li>4.2 Incentivise or require wealthy property investors to offer their properties to any past residents in order of how long they have lived there, so that those with the greatest sentimental attachment to the property have the option to buy or rent the property at no more than the price limit.</li>
  <li>4.3 If there are no past residents who are interested in buying or renting the property at the offered price (no more than the price limit), the agency will determine which applicant it should be sold or rented to based on their degree of need.</li>
 </ul>
+
+<h4>Negative gearing</h4>
+
+<p>Negative gearing operates primarily through the federal tax system, but implementing the above reforms, if they spread to other states, would allow the safe abolition of negative gearing by property investors, including by abolishing the capital gains tax discount for investment properties.</p>
+
+<p>In the meantime, it would also also allow state-level taxes on capital gains on large-portfolio property investors.</p>
 
 <h4 id="5.1_Build_Better">Build housing the right way, protecting the beauty of our suburbs and our hills<br>
  <small>(5.1_Build_Better)</small>
