--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>In other words, if enough people including competent experts were adequately paid to work together on solving our problems, they would solve our problems. But ensuring this is implemented well enough requires voters to take action to encourage independent policy thinkers to run for office and get them elected.</p>
 
+<iframe width="381" height="677" src="https://www.youtube.com/embed/SZbqgZ-uG1Q" title="Happy New Year to everyone especially Waite, Mitcham and Adelaide." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 </section> <!-- /whydetail -->
-     
- <iframe width="381" height="677" src="https://www.youtube.com/embed/SZbqgZ-uG1Q" title="Happy New Year to everyone especially Waite, Mitcham and Adelaide." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
      
 <section id="policy" class="content-section responsive-width">
 
@@ -580,7 +580,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>Negative gearing operates primarily through the federal tax system, but implementing the above reforms, if they spread to other states, would allow the safe abolition of negative gearing by property investors, including by abolishing the capital gains tax discount for investment properties.</p>
 
-<p>In the meantime, it would also also allow state-level taxes on capital gains on large-portfolio property investors.</p>
+<p>In the meantime, it would also allow state-level taxes on capital gains on large-portfolio property investors.</p>
 
 <h4 id="5.1_Build_Better">Build housing the right way, protecting the beauty of our suburbs and our hills<br>
  <small>(5.1_Build_Better)</small>
