--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
    </a>
   </nav>
 
-  <button id="theme-toggle-button" onclick="toggleTheme()"
+  <button type="button" id="theme-toggle-button" onclick="toggleTheme()"
   onmouseover="setIntroSmile(true)">Toggle Theme</button>
  </div>
 </header>
@@ -195,7 +195,7 @@ I will be posting more short videos on Youtube and social media between now and 
  <p>My plan involves a comprehensive set of policy solutions, respect for the whole community, and a pragmatic strategy to support a democratic political movement beyond our own electorate here in Waite, and beyond state politics, to influence politics for the better at the federal and international levels. We need better policies and we need a better way of doing politics. If I'm elected, I'll use the platform of state parliament to do my part in both.</p>
  <p>By the election in March, I'll get my plan across to as many people in Waite as I can, and I could use your support.</p>
  <p>If you follow me on social media or video platforms, you can see my videos and perhaps even share them around. This would be a great help, as would sharing this website with whoever you think might be interested.</p>
- <p>If you would like to donate, I can legally take donations of up to $5000, but even a few dollars would help, so e-mail me if you'd like to donate. I'll be competing with people who are allowed to spend up to $100&#8239;000 on their campaign.</p>
+ <p>If you would like to donate, I can legally take donations of up to $5000, but even a few dollars would help, so email me if you'd like to donate. I'll be competing with people who are allowed to spend up to $100&#8239;000 on their campaign.</p>
  <p>
  Best wishes,
  <br>
