--- a/index.html
+++ b/index.html
@@ -361,9 +361,9 @@ I will be posting more short videos on Youtube and social media between now and 
    <a href="#11.0_Reduce_Immigration">Maintain the refugee intake but reduce net immigration</a>
    <ul class="sub-toc-list">
     <li>
-     <a href="#11.0_Reduce_Immigration">Improve the enforcement of visa regulations</a> (11.1-11.6)
+     <a href="#11.0_Reduce_Immigration">Improve the enforcement of visa regulations</a> (11.1.1-11.2.9)
     </li>
-    <li><a href="#11.0_Reduce_Immigration">Provide adequate training and experience for Australians and reduce skilled migrant visas</a> (11.3-11.6)
+    <li><a href="#11.0_Reduce_Immigration">Provide adequate training and experience for Australians and reduce skilled migrant visas</a> (11.1.3-11.2.9)
    </ul>
   </li>
   <h3><a href="#12.0_Police_Support">Policing</a></h3>
@@ -580,7 +580,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>Negative gearing operates primarily through the federal tax system, but implementing the above reforms, if they spread to other states, would allow the safe abolition of negative gearing by property investors, including by abolishing the capital gains tax discount for investment properties.</p>
 
-<p>In the meantime, it would also allow state-level taxes on capital gains on large-portfolio property investors.</p>
+<p>In the meantime, it would also allow state-level capital gains tax on large-portfolio property investors.</p>
 
 <h4 id="5.1_Build_Better">Build housing the right way, protecting the beauty of our suburbs and our hills<br>
  <small>(5.1_Build_Better)</small>
@@ -718,23 +718,25 @@ I will be posting more short videos on Youtube and social media between now and 
 <p>Although immigration policy is primarily a federal government matter, it is important for me to have policies on this at the state level, since it sends a message to the federal government. Meanwhile, there are a number of things that can be done at the state level:</p>
 
 <ul>
- <li>11.1 Solve the police staffing crisis with new Police Support Officers, as detailed in Policy 12.0, and ensure SAPOL have enough total staff to assist the Australian Border Force in enforcing immigration law.</li>
- <li>11.2 Prevent businesses from employing illegal workers.</li>
- <li>11.3 Reduce the need, demand, and excuses for skilled visas by providing adequate training and job placements for people already here through the SAES explained in Policy 10.0 above.</li>
- <li>11.4 Reduce or cease state government requests for skilled visas from the federal government.</li>
- <li>11.5 Use the platform of state parliament to call on the federal government to take action to:
+ <li>11.1.1 Solve the police staffing crisis with new Police Support Officers, as detailed in Policy 12.0, and ensure SAPOL have enough total staff to assist the Australian Border Force in enforcing immigration law.</li>
+ <li>11.1.2 Prevent businesses from employing illegal workers.</li>
+ <li>11.1.3 Reduce the need, demand, and excuses for skilled visas by providing adequate training and job placements for people already here through the SAES explained in Policy 10.0 above.</li>
+ <li>11.1.4 Reduce or cease state government requests for skilled visas from the federal government.</li>
+ <li>11.2 Use the platform of state parliament to call on the federal government to take action to:
   <ul>
-   <li>11.5.1 Crack down on businesses that employ illegal workers.</li>
-   <li>11.5.2 Require all visitors on temporary visas to have a return ticket booked.</li>
-   <li>11.5.3 Enhance data sharing between agencies and businesses including airlines to flag overstays, and transactions such as flight cancellations suggesting likely intent to overstay.</li>
-   <li>11.5.4 Provide the Border Force with the resources to prevent illegal visa overstays.</li>
-   <li>11.5.5 Reduce unnecessary visas for work that we can train Australians to do.</li>
-   <li>11.5.6 Make immigration reciprocal, balanced and diverse. Ensure that arrivals from any one country do not exceed departures to that same country by more than 10&#8239;000 (or some lower number).</li>
-   <li>11.5.7 Require the ABS to measure and report the total population in addition to the existing resident population data.</li>
-   <li>11.5.8 Require the ABS to measure and report net arrivals in addition to the existing net migration data.</li>
+   <li>11.2.1 Crack down on businesses that employ illegal workers.</li>
+   <li>11.2.2 Require all visitors on temporary visas to have a return ticket booked.</li>
+   <li>11.2.3 Enhance data sharing between agencies and businesses including airlines to flag overstays, and transactions such as flight cancellations suggesting likely intent to overstay.</li>
+   <li>11.2.4 Provide the Border Force with the resources to prevent illegal visa overstays.</li>
+   <li>11.2.5 Reduce unnecessary visas for work that we can train Australians to do.</li>
+   <li>11.2.6 Make immigration reciprocal, balanced and diverse. Ensure that arrivals from any one country do not exceed departures to that same country by more than 10&#8239;000 (or some lower number).</li>
+   <li>11.2.7 Require the ABS to measure and report the total population in addition to the existing resident population data.</li>
+   <li>11.2.8 Require the ABS to measure and report net arrivals in addition to the existing net migration data.</li>
+   <li>11.2.9 Advocate for constitutional reform, allowing state regulations of immigration of non-citizens to the state, in addition to federal regulations.</li>
+  <li>11.3 Once immigration numbers have been adequately reduced, stop charging for emergency medical care for anyone who really needs to be here.</p>
   </ul>
  </li>
- <li>11.6 Use the platform of state parliament to advocate for constitutional reform, allowing state regulations of immigration of non-citizens to the state, in addition to federal regulations.</li>
+ 
 </ul>
 
 <p>The South Australian Employment Service (SAES) detailed above will reduce the demand for skilled workers to move to South Australia, reduce the need for state-sponsored skilled visas, and reduce the demand for the federal government to hand out other skilled visas. Training underemployed and undertrained Australians and providing more paid work experience opportunities will negate the need for bringing so many skilled visa holders into South Australia. We can address almost all of our real skills shortages locally, not only through tertiary education, but also through government-supported and business-supported apprenticeships, other on-the-job training, and other paid work experience opportunities, for people who are already here, rather than bringing additional people in from interstate and overseas to compensate for our lack of proper training systems and job experience opportunities.</p>
