--- a/index.html
+++ b/index.html
@@ -937,6 +937,8 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>Provide sporting clubs and similar clubs and health education services with the funding to provide South Australians with at least one free group lesson per year.</p>
 
+<p>Ensure that publicly available exercise facilities such as playgrounds, tennis courts and basketball courts are in good condition, and support installing lights to facilitate greater usage.</p>
+
 <h4 id="19.6_Healthier_Drinks">More diet soft drink options than regular soft drink options<br>
  <small>(19.6_Healthier_Drinks)</small>
 </h4>
