--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@ I will be posting more short videos on Youtube and social media between now and 
      <a href="#18.1_Support_Learning">Provide funding for smaller class sizes, better pay for teachers and evidence-based reform</a>
     </li>
     <li>
-     <a href="#18.1_Support_Learning">Ensure libraries are well funded</a>
+     <a href="#18.1_Support_Learning">Ensure libraries are well funded and indexed to match CPI inflation, and oppose cuts</a>
     </li>
     <li>
      <a href="#18.2_Support_Artists">Ensure more local music in local businesses and fair pay for local recording artists</a>
@@ -867,7 +867,7 @@ I will be posting more short videos on Youtube and social media between now and 
    18.1.3 Allow everyone to study one university subject for one semester for free at university, and then continue to study one subject per semester for free if their grades in their previous free subject were good, to facilitate lifelong learning and skill developemnt.
  </li>
  <li>
-   18.1.4 Ensure libraries are well funded.
+   18.1.4 Ensure libraries are well funded and indexed to match CPI inflation, and oppose cuts.
  </li>
 </ul>
 
