--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ I will be posting more short videos on Youtube and social media between now and 
   <li>
   <ul class="sub-toc-list">
    <li>
-    <a href="#1.1_Efficiency_Loans">Reduce bills by providing zero-interest loans for efficiency upgrades including solar water heating and electrification at regulated prices</a> (1.1)
+    <a href="#1.1_Efficiency_Loans">Reduce bills by providing zero-interest loans and subsidies for efficiency upgrades including solar water heating and electrification at regulated prices</a> (1.1)
    </li>
    <li>
     <a href="#1.2_Cheap_Essentials">Provide cheap electricity and cheap healthy foods with government investment, and a PBS-like system of regulation and compensation</a> (1.2)
@@ -480,7 +480,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <h3 id="COL">Cost of Living</h3>
 
-<h4 id="1.1_Efficiency_Loans">Reduce bills by providing zero-interest loans for efficiency upgrades including solar water heating and electrification at regulated prices<br>
+<h4 id="1.1_Efficiency_Loans">Reduce bills by providing zero-interest loans and subsidies for efficiency upgrades including solar water heating and electrification at regulated prices<br>
  <small>(1.1_Efficiency_Loans)</small>
 </h4>
 
