--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ I will be posting more short videos on Youtube and social media between now and 
  <small>(1.1_Efficiency_Loans)</small>
 </h4>
 
-<p>Provide zero-interest loans for purchases that reduce costs and increase efficiency such as purchasing electric cars, switching to electric heating, adding solar water heating, buying a vehicle-to-home inverter, or repainting a dark roof to a heat-reflecting white. This will be designed to reduce prices by providing only enough to make the difference up to a target price.</p>
+<p>Provide zero-interest loans and subsidies for purchases that reduce costs and increase efficiency such as purchasing electric cars, switching to electric heating, adding solar water heating, buying a vehicle-to-home inverter, or repainting a dark roof to a heat-reflecting white. This will be designed to reduce prices by providing only enough to make the difference up to a target price.</p>
 
 <h4 id="1.2_Cheap_Essentials">Provide cheap electricity and cheap healthy foods<br>
  <small>(1.2_Cheap_Essentials)</small>
