--- a/index.html
+++ b/index.html
@@ -1042,6 +1042,8 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <iframe width="382" height="679" src="https://www.youtube.com/embed/Qf22wA-NNSs" title="Am I experienced enough to be a good independent for Waite?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+<iframe width="388" height="690" src="https://www.youtube.com/embed/OWj7d4cm4BM" title="Why experience isn&#39;t always a good sign." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 </section> <!-- experience -->
 
 <section id="reading" class="content-section responsive-width">
