--- a/index.html
+++ b/index.html
@@ -610,12 +610,12 @@ I will be posting more short videos on Youtube and social media between now and 
  <small>(6.2_More_EDs)</small>
 </h4>
 
-<p>Expand the government's policy to increase the number of hospitals and emergency departments, the size of emergency departments, and increase the number of staff, and the number, quality and affordability of aged care centres. We can:</p>
+<p>Increase the number of hospitals and emergency departments, the size of emergency departments, and increase the number of staff, and the number, quality and affordability of aged care centres. We can:</p>
 
 <ul>
  <li>6.2.1 If feasible, reopen hospitals that are no longer being used as hospitals, such as the Blackwood Hospital.</li>
  <li>6.2.2 If feasible, reopen emergency departments that have been closed, like the emergency department at the Repat.</li>
- <li>6.2.3 Build new hospitals, and design them to efficiently provide the most desperately needed services.</li>
+ <li>6.2.3 Build new hospitals, and design them to efficiently provide the most desperately needed services. Not every hospital has to be huge. Small hospitals are quicker to build.</li>
  <li>6.2.4 Allow more Australians to study medical degrees and clinical psychology in South Australia.</li>
  <li>6.2.5 Allow psychologists to assist psychiatrists in mental hospitals.</li>
  <li>6.2.6 Hire more social workers and occupational therapists to assist psychiatrists in our mental hospitals.</li>
@@ -762,7 +762,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
  <iframe width="381" height="677" src="https://www.youtube.com/embed/fu1IPLOpx94" title="How to solve Adelaide's algae crisis, Part 1. Independent candidate for Waite, City of Mitcham." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-<p>The South Australian Research and Development Institute (SARDI) is our state equivalent to the CSIRO, but unlike the CSIRO it is not independent from other departments. It is part of the Department of Primary Industries and Regions (PIRSA), which is effectively the mining and farming department. This creates an inherent conflict of interest, since objective research will not always favour the mining and farming industries. In fact, in many cases such as the algae crisis, our farming industry has a strong interest in preventing good research and honest communication about the causes of this crisis.</p>
+<p>The South Australian Research and Development Institute (SARDI) is our state equivalent to the CSIRO, but unlike the CSIRO it is part of another department, the Department of Primary Industries and Regions (PIRSA), which is effectively the mining and farming department. This creates an inherent conflict of interest, since research cannot be unbiased if it's designed only to favour the mining and farming industries. In fact, in many cases such as the algae crisis, our farming industry has a strong interest in preventing good research and honest communication about the causes of this crisis.</p>
 
 <p>We need to:</p>
 <ul>
