--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
  <iframe width="381" height="677" src="https://www.youtube.com/embed/fu1IPLOpx94" title="How to solve Adelaide's algae crisis, Part 1. Independent candidate for Waite, City of Mitcham." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-<p>The South Australian Research and Development Institute (SARDI) is our state equivalent to the CSIRO, but unlike the CSIRO it is part of another department, the Department of Primary Industries and Regions (PIRSA), which is effectively the mining and farming department. This creates an inherent conflict of interest, since research cannot be unbiased if it's designed only to favour the mining and farming industries. In fact, in many cases such as the algae crisis, our farming industry has a strong interest in preventing good research and honest communication about the causes of this crisis.</p>
+<p>The South Australian Research and Development Institute (SARDI) is our state equivalent to the CSIRO, but unlike the CSIRO it is part of another department, the Department of Primary Industries and Regions (PIRSA), which is effectively the mining and farming department. This creates an inherent conflict of interest, since research cannot be unbiased if it's all designed to benefit the mining and farming industries. In fact, in many cases such as the algae crisis, our farming industry has a strong interest in preventing good research and honest communication about the causes of this crisis.</p>
 
 <p>We need to:</p>
 <ul>
