--- a/index.html
+++ b/index.html
@@ -774,7 +774,10 @@ I will be posting more short videos on Youtube and social media between now and 
    <li>13.3.2 Measure the contribution of our industries to pollution and incentivise them to switch to methods or industries that cause less pollution;</li>
    <li>14.1 Lead the world in reducing climate crisis pollution, including from transport and agriculture (the two main pollution sectors in South Australia) as detailed in 14.0_Clean_Air below.
   </ul>
+ <li>Put the EPA in charge of the science communication, and give them the resources to do this.</li>
 </ul>
+
+<p>The EPA so far have done a much better job of communicating the causes of harmful algal blooms, and have admitted that nutrient pollution in general is a major factor, but even they have not mentioned the contribution of our own sewage water and agricultural runoff, which were both mentioned in the 2000 federal Inquiry into Gulf St Vincent.</p>
 
 <iframe width="381" height="677" src="https://www.youtube.com/embed/PL7x9pn-KOQ" title="Part 2 on Adelaide's algae crisis. Part 3 will go over my own policies on this in detail." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
