--- a/index.html
+++ b/index.html
@@ -756,11 +756,11 @@ I will be posting more short videos on Youtube and social media between now and 
 <h3>Pollution, traffic congestion and the algae crisis
 </h3>
 
- <h4 id="13.0_Algae_Solution">Address the pollution that caused the algae crisis so the algae doesn't come back<br>
-  <small>(13.0_Algae_Solution)</small>
- </h4>
+<h4 id="13.0_Algae_Solution">Address the pollution that caused the algae crisis so the algae doesn't come back<br>
+ <small>(13.0_Algae_Solution)</small>
+</h4>
 
- <iframe width="381" height="677" src="https://www.youtube.com/embed/fu1IPLOpx94" title="How to solve Adelaide's algae crisis, Part 1. Independent candidate for Waite, City of Mitcham." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="388" height="690" src="https://www.youtube.com/embed/f3lSazUIB9A" title="Algae crisis, part 3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <p>The South Australian Research and Development Institute (SARDI) is our state equivalent to the CSIRO, but unlike the CSIRO it is part of another department, the Department of Primary Industries and Regions (PIRSA), which is effectively the mining and farming department. This creates an inherent conflict of interest, since research cannot be unbiased if it's all designed to benefit the mining and farming industries. In fact, in many cases such as the algae crisis, our farming industry has a strong interest in preventing good research and honest communication about the causes of this crisis.</p>
 
@@ -778,6 +778,8 @@ I will be posting more short videos on Youtube and social media between now and 
 </ul>
 
 <p>The EPA so far have done a much better job of communicating the <a href="https://www.epa.sa.gov.au/environmental_info/water_quality/harmful-algal-blooms">causes of harmful algal blooms</a>, and have admitted that nutrient pollution in generally is a major factor, but even they have not mentioned the contribution of our own sewage water and agricultural runoff, which were both mentioned in the 2000 federal <a href="https://www.aph.gov.au/Parliamentary_Business/Committees/Senate/Environment_and_Communications/Completed_inquiries/1999-02/gulf/report/c03">Inquiry into Gulf St Vincent.</a></p>
+
+<iframe width="381" height="677" src="https://www.youtube.com/embed/fu1IPLOpx94" title="How to solve Adelaide's algae crisis, Part 1. Independent candidate for Waite, City of Mitcham." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <iframe width="381" height="677" src="https://www.youtube.com/embed/PL7x9pn-KOQ" title="Part 2 on Adelaide's algae crisis. Part 3 will go over my own policies on this in detail." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
