--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
  </div>
 </section>
 
-<section id="podcast" class="content-section responsive-width">
+<section id="intro" class="content-section responsive-width">
 
 <p>Hi. I'm Alec Gargett, and I'm running as an Independent for Waite.<br>
  I've been preparing for this job since I was 19, and I'm now 37.<br>
@@ -133,7 +133,7 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <p>You can also listen to a podcast version of the first part of an older version of this website on <a href="https://music.youtube.com/playlist?list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT&si=0X1qqmtE6xEp0D_0">Youtube Music</a>, <a href="https://open.spotify.com/episode/0OgcLqFbmoG5ZxTQNLFg3c?si=kTGEkiXwTxGF2VnEg_j7qQ">Spotify</a>, <a href="https://podcasts.apple.com/us/podcast/alec-gargetts-podcast/id1866476428">Apple Podcasts</a> or watch on <a href="https://www.youtube.com/watch?v=kC8SzDs7b-U&list=PLUrnG2hICe0jvTngPbAiB_SDm8b7SlkLT">Youtube</a>.</p>
 
-</section> <!--/podcast-->
+</section> <!--/intro-->
 
 <section id="plan" class="content-section responsive-width">
 <h2>My plan</h2>
