--- a/index.html
+++ b/index.html
@@ -709,6 +709,8 @@ I will be posting more short videos on Youtube and social media between now and 
 
 <iframe width="388" height="690" src="https://www.youtube.com/embed/krxN7ERG89U" title="4 million more people in just 10 years?! #immigration" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+<p>Australia's population is projected to grow by 4 million over the next 10 years.</p>
+
 <p>The left are currently empowering racist, xenophobic, anti-progressive, anti-science politicians by rejecting the more valid concerns and democratic rights of voters when it comes to immigration. During the COVID border closures, rents became cheaper. When businesses opened back up again, but international borders were still shut, unemployment dropped to the lowest rate in 50 years. And these are only the short-term effects. In the long-term, the quality of housing we are living in will continue to get worse if the population density in our cities continues to grow due to an intake of millions per decade, the rate that corporations and their political parties have chosen. It also increasingly makes it hard to solve other problems: harder to build enough public transport and eliminate traffic congestion and transport pollution, harder to reduce harm to our environment and animals through land use, resource use, production, construction and consumption.</p>
 
 <p>The Albanese government's current plan is net immigration of around 230&#8239;000 per year, a rate of 2.3 million people per decade. The opposition's plan is to reduce this to a net intake of 130&#8239;000 per year, a rate of 1.3 million per decade. Neither has a comprehensive plan like my plan above to end our reliance on high rates of worker immigration.</p>
@@ -735,7 +737,8 @@ I will be posting more short videos on Youtube and social media between now and 
    <li>11.2.7 Require the ABS to measure and report the total population in addition to the existing resident population data.</li>
    <li>11.2.8 Require the ABS to measure and report net arrivals in addition to the existing net migration data.</li>
    <li>11.2.9 Advocate for constitutional reform, allowing state regulations of immigration of non-citizens to the state, in addition to federal regulations.</li>
-  <li>11.3 Once immigration numbers have been adequately reduced, stop charging for emergency medical care for anyone who really needs to be here.</p>
+  </li>
+  <li>11.3 Once immigration numbers have been adequately reduced, stop charging for emergency medical care for anyone who really needs to be here.</li>
   </ul>
  </li>
  
